route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ttyd
  name: ttyd
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ttyd
    weight: 100
  wildcardPolicy: None
